<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/sv_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_id"
                style="@style/tv_black_bold_14"
                android:text="@string/tag_id"
                app:layout_constraintBottom_toBottomOf="@+id/et_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_id" />

            <EditText
                android:id="@+id/et_id"
                style="@style/et_grey_radius_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_num"
                style="@style/tv_black_bold_14"
                android:text="@string/tag_num"
                app:layout_constraintBottom_toBottomOf="@+id/et_num"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_num" />

            <EditText
                android:id="@+id/et_num"
                style="@style/et_grey_radius_5"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/et_id"
                app:layout_constraintStart_toStartOf="@+id/et_id"
                app:layout_constraintTop_toBottomOf="@+id/et_id" />

            <TextView
                android:id="@+id/tv_kind"
                style="@style/tv_black_bold_14"
                android:text="@string/tag_kind"
                app:layout_constraintBottom_toBottomOf="@+id/et_kind"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_kind" />


            <EditText
                android:id="@+id/et_kind"
                style="@style/et_grey_radius_5"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/et_num"
                app:layout_constraintStart_toStartOf="@+id/et_num"
                app:layout_constraintTop_toBottomOf="@+id/et_num" />

            <View
                android:id="@+id/guideline1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/pinkish_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_kind" />

            <LinearLayout
                android:id="@+id/ll_item_title"
                style="@style/ll_detect"
                android:layout_marginTop="10dp"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline1">

                <TextView
                    style="@style/tv_black_bold_14"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/blank" />

                <TextView
                    style="@style/tv_black_bold_14"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:gravity="center"
                    android:text="@string/enter" />

                <TextView
                    style="@style/tv_black_bold_14"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:gravity="center"
                    android:text="@string/standard" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_item_1"
                style="@style/ll_detect"
                android:layout_marginTop="5dp"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_item_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/tv_length_title"
                        style="@style/tv_black_bold_14"
                        android:text="@string/width"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/hint_14_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mm_in"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_length_title"
                        app:layout_constraintStart_toEndOf="@+id/tv_length_title"
                        app:layout_constraintTop_toTopOf="@+id/tv_length_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/et_width"
                    style="@style/et_white_two_radius_5"
                    android:layout_weight="3.5"
                    tools:text="995" />

                <TextView
                    android:id="@+id/tv_standard_width"
                    style="@style/tv_red_15"
                    android:layout_weight="3.5"
                    android:text="@string/standard_1_first" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_item_2"
                style="@style/ll_detect"
                android:layout_marginTop="5dp"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_item_1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/tv_width_title"
                        style="@style/tv_black_bold_14"
                        android:text="@string/height"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/hint_14_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mm_in"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_width_title"
                        app:layout_constraintStart_toEndOf="@+id/tv_width_title"
                        app:layout_constraintTop_toTopOf="@+id/tv_width_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/et_height"
                    style="@style/et_white_two_radius_5"
                    android:layout_weight="3.5"
                    tools:text="995" />

                <TextView
                    android:id="@+id/tv_standard_height"
                    style="@style/tv_red_15"
                    android:layout_weight="3.5"
                    android:text="@string/standard_1_second" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_item_3"
                style="@style/ll_detect"
                android:layout_marginTop="5dp"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_item_2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/tv_height_title"
                        style="@style/tv_black_bold_14"
                        android:text="@string/length"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/hint_14_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mm_in"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_height_title"
                        app:layout_constraintStart_toEndOf="@+id/tv_height_title"
                        app:layout_constraintTop_toTopOf="@+id/tv_height_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <EditText
                    android:id="@+id/et_length"
                    style="@style/et_white_two_radius_5"
                    android:layout_weight="3.5"
                    tools:text="995" />

                <TextView
                    android:id="@+id/tv_standard_length"
                    style="@style/tv_red_15"
                    android:layout_weight="3.5"
                    android:text="@string/standard_1_third" />
            </LinearLayout>

            <View
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/pinkish_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_item_3" />

            <TextView
                android:id="@+id/textView"
                style="@style/tv_black_bold_14"
                android:layout_marginTop="10dp"
                android:text="@string/detect_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/item_picture" />

            <View
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/pinkish_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_picture" />

            <TextView
                android:id="@+id/tv_result_title"
                style="@style/tv_black_bold_14"
                android:layout_marginTop="10dp"
                android:text="@string/detect_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline3" />

            <Button
                android:id="@+id/bt_fail"
                style="@style/btn_grey_radius_5"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/detect_fail"
                app:layout_constraintEnd_toStartOf="@+id/bt_success"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_result_title" />

            <Button
                android:id="@+id/bt_success"
                style="@style/btn_grey_radius_5"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:text="@string/detect_success"
                app:layout_constraintBottom_toBottomOf="@+id/bt_fail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_fail"
                app:layout_constraintTop_toTopOf="@+id/bt_fail" />

            <Button
                android:id="@+id/bt_send"
                style="@style/btn_main_light_font_white_20"
                android:layout_marginTop="10dp"
                android:text="@string/detect_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_fail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>