<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.project.ProjectActivity">

        <!--Custom Toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/white_bold_18_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_product"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/black_bold_14_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project" />

            <Spinner
                style="@style/sp_default"
                android:id="@+id/sp_project"
                android:layout_marginTop="10dp"/>


            <TextView
                style="@style/black_bold_14_font"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product" />

            <Spinner
                style="@style/sp_default"
                android:id="@+id/sp_manufacture"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_select_finish"
            style="@style/btn_grey_radius_5"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/selector_bt_activate"
            android:text="@string/select_finish"
            android:textColor="@color/selector_tv_activate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/pb_loading"
            layout="@layout/layout_loading"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>