<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradation_background"
            tools:context=".ui.login.LoginActivity">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/img_logo"
                app:layout_constraintBottom_toBottomOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.48" />

            <LinearLayout
                android:id="@+id/ll_login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline">

                <TextView
                    style="@style/white_14_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

                <EditText
                    android:id="@+id/et_login_id"
                    style="@style/et_white_radius_5"
                    android:layout_marginTop="12dp"
                    android:inputType="text"
                    android:hint="@string/id" />

                <TextView
                    style="@style/white_14_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/et_login_pw"
                    style="@style/et_white_radius_5"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <CheckBox
                    android:id="@+id/cb_login_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:button="@drawable/checkbox_selector"
                    android:text="@string/auto_login"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_login"
                style="@style/btn_white_radius_5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_login_container" />

            <include
                android:id="@+id/pb_loading"
                layout="@layout/layout_loading"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>